lang.output
Nonterminals useless in grammar

    assign
    varlist


Terminals unused in grammar

    RAND
    ','


Rules useless in grammar

   22 varlist: IDENT
   23        | IDENT ',' varlist


State 21 conflicts: 2 shift/reduce
State 28 conflicts: 2 shift/reduce
State 29 conflicts: 1 shift/reduce
State 35 conflicts: 2 shift/reduce
State 36 conflicts: 2 shift/reduce
State 37 conflicts: 2 shift/reduce
State 38 conflicts: 5 shift/reduce
State 39 conflicts: 5 shift/reduce
State 44 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: stmt cst

    2 cst: CONST declist

    3 declist: IDENT ASSIGN NUM
    4        | declist IDENT ASSIGN NUM

    5 stmt: stmt ';' stmt
    6     | IF expr stmt
    7     | IF expr stmt ELSE stmt
    8     | STRAT IDSTRAT stmt
    9     | RET expr
   10     | DEF IDENT ASSIGN expr

   11 expr: IDENT
   12     | expr OR expr
   13     | expr AND expr
   14     | expr EQ expr
   15     | expr INF expr
   16     | expr SUP expr
   17     | NOT expr
   18     | CHEAT
   19     | HONEST
   20     | NUM
   21     | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 21
    ')' (41) 21
    ',' (44)
    ';' (59) 5
    error (256)
    ASSIGN (258) 3 4 10
    OR (259) 12
    AND (260) 13
    NOT (261) 17
    EQ (262) 14
    IF (263) 6 7
    ELSE (264) 7
    STRAT (265) 8
    CONST (266) 2
    DEF (267) 10
    CHEAT (268) 18
    HONEST (269) 19
    IDSTRAT (270) 8
    RAND (271)
    RET (272) 9
    INF (273) 15
    SUP (274) 16
    IDENT <i> (275) 3 4 10 11
    NUM <i> (276) 3 4 20


Nonterminals, with rules where they appear

    $accept (26)
        on left: 0
    prog (27)
        on left: 1
        on right: 0
    cst (28)
        on left: 2
        on right: 1
    declist <v> (29)
        on left: 3 4
        on right: 2 4
    stmt <s> (30)
        on left: 5 6 7 8 9 10
        on right: 1 5 6 7 8
    expr <e> (31)
        on left: 11 12 13 14 15 16 17 18 19 20 21
        on right: 6 7 9 10 12 13 14 15 16 17 21


State 0

    0 $accept: • prog $end

    IF     shift, and go to state 1
    STRAT  shift, and go to state 2
    DEF    shift, and go to state 3
    RET    shift, and go to state 4

    prog  go to state 5
    stmt  go to state 6


State 1

    6 stmt: IF • expr stmt
    7     | IF • expr stmt ELSE stmt

    NOT     shift, and go to state 7
    CHEAT   shift, and go to state 8
    HONEST  shift, and go to state 9
    IDENT   shift, and go to state 10
    NUM     shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 13


State 2

    8 stmt: STRAT • IDSTRAT stmt

    IDSTRAT  shift, and go to state 14


State 3

   10 stmt: DEF • IDENT ASSIGN expr

    IDENT  shift, and go to state 15


State 4

    9 stmt: RET • expr

    NOT     shift, and go to state 7
    CHEAT   shift, and go to state 8
    HONEST  shift, and go to state 9
    IDENT   shift, and go to state 10
    NUM     shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 16


State 5

    0 $accept: prog • $end

    $end  shift, and go to state 17


State 6

    1 prog: stmt • cst
    5 stmt: stmt • ';' stmt

    CONST  shift, and go to state 18
    ';'    shift, and go to state 19

    cst  go to state 20


State 7

   17 expr: NOT • expr

    NOT     shift, and go to state 7
    CHEAT   shift, and go to state 8
    HONEST  shift, and go to state 9
    IDENT   shift, and go to state 10
    NUM     shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 21


State 8

   18 expr: CHEAT •

    $default  reduce using rule 18 (expr)


State 9

   19 expr: HONEST •

    $default  reduce using rule 19 (expr)


State 10

   11 expr: IDENT •

    $default  reduce using rule 11 (expr)


State 11

   20 expr: NUM •

    $default  reduce using rule 20 (expr)


State 12

   21 expr: '(' • expr ')'

    NOT     shift, and go to state 7
    CHEAT   shift, and go to state 8
    HONEST  shift, and go to state 9
    IDENT   shift, and go to state 10
    NUM     shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 22


State 13

    6 stmt: IF expr • stmt
    7     | IF expr • stmt ELSE stmt
   12 expr: expr • OR expr
   13     | expr • AND expr
   14     | expr • EQ expr
   15     | expr • INF expr
   16     | expr • SUP expr

    OR     shift, and go to state 23
    AND    shift, and go to state 24
    EQ     shift, and go to state 25
    IF     shift, and go to state 1
    STRAT  shift, and go to state 2
    DEF    shift, and go to state 3
    RET    shift, and go to state 4
    INF    shift, and go to state 26
    SUP    shift, and go to state 27

    stmt  go to state 28


State 14

    8 stmt: STRAT IDSTRAT • stmt

    IF     shift, and go to state 1
    STRAT  shift, and go to state 2
    DEF    shift, and go to state 3
    RET    shift, and go to state 4

    stmt  go to state 29


State 15

   10 stmt: DEF IDENT • ASSIGN expr

    ASSIGN  shift, and go to state 30


State 16

    9 stmt: RET expr •
   12 expr: expr • OR expr
   13     | expr • AND expr
   14     | expr • EQ expr
   15     | expr • INF expr
   16     | expr • SUP expr

    OR   shift, and go to state 23
    AND  shift, and go to state 24
    EQ   shift, and go to state 25
    INF  shift, and go to state 26
    SUP  shift, and go to state 27

    $default  reduce using rule 9 (stmt)


State 17

    0 $accept: prog $end •

    $default  accept


State 18

    2 cst: CONST • declist

    IDENT  shift, and go to state 31

    declist  go to state 32


State 19

    5 stmt: stmt ';' • stmt

    IF     shift, and go to state 1
    STRAT  shift, and go to state 2
    DEF    shift, and go to state 3
    RET    shift, and go to state 4

    stmt  go to state 33


State 20

    1 prog: stmt cst •

    $default  reduce using rule 1 (prog)


State 21

   12 expr: expr • OR expr
   13     | expr • AND expr
   14     | expr • EQ expr
   15     | expr • INF expr
   16     | expr • SUP expr
   17     | NOT expr •

    EQ   shift, and go to state 25
    INF  shift, and go to state 26
    SUP  shift, and go to state 27

    INF       [reduce using rule 17 (expr)]
    SUP       [reduce using rule 17 (expr)]
    $default  reduce using rule 17 (expr)


State 22

   12 expr: expr • OR expr
   13     | expr • AND expr
   14     | expr • EQ expr
   15     | expr • INF expr
   16     | expr • SUP expr
   21     | '(' expr • ')'

    OR   shift, and go to state 23
    AND  shift, and go to state 24
    EQ   shift, and go to state 25
    INF  shift, and go to state 26
    SUP  shift, and go to state 27
    ')'  shift, and go to state 34


State 23

   12 expr: expr OR • expr

    NOT     shift, and go to state 7
    CHEAT   shift, and go to state 8
    HONEST  shift, and go to state 9
    IDENT   shift, and go to state 10
    NUM     shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 35


State 24

   13 expr: expr AND • expr

    NOT     shift, and go to state 7
    CHEAT   shift, and go to state 8
    HONEST  shift, and go to state 9
    IDENT   shift, and go to state 10
    NUM     shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 36


State 25

   14 expr: expr EQ • expr

    NOT     shift, and go to state 7
    CHEAT   shift, and go to state 8
    HONEST  shift, and go to state 9
    IDENT   shift, and go to state 10
    NUM     shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 37


State 26

   15 expr: expr INF • expr

    NOT     shift, and go to state 7
    CHEAT   shift, and go to state 8
    HONEST  shift, and go to state 9
    IDENT   shift, and go to state 10
    NUM     shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 38


State 27

   16 expr: expr SUP • expr

    NOT     shift, and go to state 7
    CHEAT   shift, and go to state 8
    HONEST  shift, and go to state 9
    IDENT   shift, and go to state 10
    NUM     shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 39


State 28

    5 stmt: stmt • ';' stmt
    6     | IF expr stmt •
    7     | IF expr stmt • ELSE stmt

    ELSE  shift, and go to state 40
    ';'   shift, and go to state 19

    ELSE      [reduce using rule 6 (stmt)]
    ';'       [reduce using rule 6 (stmt)]
    $default  reduce using rule 6 (stmt)


State 29

    5 stmt: stmt • ';' stmt
    8     | STRAT IDSTRAT stmt •

    ';'  shift, and go to state 19

    ';'       [reduce using rule 8 (stmt)]
    $default  reduce using rule 8 (stmt)


State 30

   10 stmt: DEF IDENT ASSIGN • expr

    NOT     shift, and go to state 7
    CHEAT   shift, and go to state 8
    HONEST  shift, and go to state 9
    IDENT   shift, and go to state 10
    NUM     shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 41


State 31

    3 declist: IDENT • ASSIGN NUM

    ASSIGN  shift, and go to state 42


State 32

    2 cst: CONST declist •
    4 declist: declist • IDENT ASSIGN NUM

    IDENT  shift, and go to state 43

    $default  reduce using rule 2 (cst)


State 33

    5 stmt: stmt • ';' stmt
    5     | stmt ';' stmt •

    $default  reduce using rule 5 (stmt)


State 34

   21 expr: '(' expr ')' •

    $default  reduce using rule 21 (expr)


State 35

   12 expr: expr • OR expr
   12     | expr OR expr •
   13     | expr • AND expr
   14     | expr • EQ expr
   15     | expr • INF expr
   16     | expr • SUP expr

    AND  shift, and go to state 24
    EQ   shift, and go to state 25
    INF  shift, and go to state 26
    SUP  shift, and go to state 27

    INF       [reduce using rule 12 (expr)]
    SUP       [reduce using rule 12 (expr)]
    $default  reduce using rule 12 (expr)


State 36

   12 expr: expr • OR expr
   13     | expr • AND expr
   13     | expr AND expr •
   14     | expr • EQ expr
   15     | expr • INF expr
   16     | expr • SUP expr

    EQ   shift, and go to state 25
    INF  shift, and go to state 26
    SUP  shift, and go to state 27

    INF       [reduce using rule 13 (expr)]
    SUP       [reduce using rule 13 (expr)]
    $default  reduce using rule 13 (expr)


State 37

   12 expr: expr • OR expr
   13     | expr • AND expr
   14     | expr • EQ expr
   14     | expr EQ expr •
   15     | expr • INF expr
   16     | expr • SUP expr

    EQ   shift, and go to state 25
    INF  shift, and go to state 26
    SUP  shift, and go to state 27

    INF       [reduce using rule 14 (expr)]
    SUP       [reduce using rule 14 (expr)]
    $default  reduce using rule 14 (expr)


State 38

   12 expr: expr • OR expr
   13     | expr • AND expr
   14     | expr • EQ expr
   15     | expr • INF expr
   15     | expr INF expr •
   16     | expr • SUP expr

    OR   shift, and go to state 23
    AND  shift, and go to state 24
    EQ   shift, and go to state 25
    INF  shift, and go to state 26
    SUP  shift, and go to state 27

    OR        [reduce using rule 15 (expr)]
    AND       [reduce using rule 15 (expr)]
    EQ        [reduce using rule 15 (expr)]
    INF       [reduce using rule 15 (expr)]
    SUP       [reduce using rule 15 (expr)]
    $default  reduce using rule 15 (expr)


State 39

   12 expr: expr • OR expr
   13     | expr • AND expr
   14     | expr • EQ expr
   15     | expr • INF expr
   16     | expr • SUP expr
   16     | expr SUP expr •

    OR   shift, and go to state 23
    AND  shift, and go to state 24
    EQ   shift, and go to state 25
    INF  shift, and go to state 26
    SUP  shift, and go to state 27

    OR        [reduce using rule 16 (expr)]
    AND       [reduce using rule 16 (expr)]
    EQ        [reduce using rule 16 (expr)]
    INF       [reduce using rule 16 (expr)]
    SUP       [reduce using rule 16 (expr)]
    $default  reduce using rule 16 (expr)


State 40

    7 stmt: IF expr stmt ELSE • stmt

    IF     shift, and go to state 1
    STRAT  shift, and go to state 2
    DEF    shift, and go to state 3
    RET    shift, and go to state 4

    stmt  go to state 44


State 41

   10 stmt: DEF IDENT ASSIGN expr •
   12 expr: expr • OR expr
   13     | expr • AND expr
   14     | expr • EQ expr
   15     | expr • INF expr
   16     | expr • SUP expr

    OR   shift, and go to state 23
    AND  shift, and go to state 24
    EQ   shift, and go to state 25
    INF  shift, and go to state 26
    SUP  shift, and go to state 27

    $default  reduce using rule 10 (stmt)


State 42

    3 declist: IDENT ASSIGN • NUM

    NUM  shift, and go to state 45


State 43

    4 declist: declist IDENT • ASSIGN NUM

    ASSIGN  shift, and go to state 46


State 44

    5 stmt: stmt • ';' stmt
    7     | IF expr stmt ELSE stmt •

    ';'  shift, and go to state 19

    ';'       [reduce using rule 7 (stmt)]
    $default  reduce using rule 7 (stmt)


State 45

    3 declist: IDENT ASSIGN NUM •

    $default  reduce using rule 3 (declist)


State 46

    4 declist: declist IDENT ASSIGN • NUM

    NUM  shift, and go to state 47


State 47

    4 declist: declist IDENT ASSIGN NUM •

    $default  reduce using rule 4 (declist)
